# GameWatchCon

./: .clang-format  .clang-format.bak  .clangd  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GameWatch.slnx  README.md  vcpkg-configuration.json  vcpkg.json  vcpkg.json.bak
Build_Systems/CMake/: CMakeLists.txt  CMakePresets.json  vcpkg.json
Code/: CMakeLists.txt  CMakePresets.json  pch.hxx  vcpkg.json
Code/App/Core/: Core.ixx
Code/App/Core/App/: App.cpp  App.cxx  App.hpp  App.ixx
Code/App/Core/AppConfig/: AppConfig.cpp  AppConfig.hpp  AppConfig.ixx
Code/App/Core/AppEntryPoint/: Main.cpp  Main.cxx  Main.hpp
Code/App/Core/AppState/: AppState.cpp  AppState.hpp  AppState.ixx
Code/App/Core/Console/: Console.cxx  Console.ixx
Code/App/Core/GameClock/: GameClock.cxx  GameClock.ixx
Code/App/Core/GameEntry/: GameEntry.cxx  GameEntry.ixx
Code/App/Core/GameLibrary/: GameLibrary.cxx  GameLibrary.ixx
Code/App/Core/Task/: Base.cpp  Base.hpp  Data.cpp  Data.hpp  Kind.hpp  Role.hpp  Task.cpp  Task.cxx  Task.hpp  Task.ixx  Type.hpp
Code/App/Core/TaskInterface/: TaskInterface.cpp  TaskInterface.hpp
Code/App/Core/TaskQueue/: TaskQueue.cpp  TaskQueue.cxx  TaskQueue.hpp  TaskQueue.ixx
Code/App/Core/TaskRole/: TaskRole.hpp
Code/App/Core/TaskStack/: TaskStack.cpp  TaskStack.hpp
Code/App/Core/TaskType/: TaskType.hpp
Code/App/Tasks/: Tasks.ixx
Code/App/Tasks/AddNewGame/: AddNewGame.cxx  AddNewGame.ixx
Code/App/Tasks/ChangeGameTitle/: ChangeGameTitle.cxx  ChangeGameTitle.ixx
Code/App/Tasks/DeleteGame/: DeleteGame.cxx  DeleteGame.ixx
Code/App/Tasks/EditGamesMenu/: EditGamesMenu.cxx  EditGamesMenu.ixx
Code/App/Tasks/ForwardUserFromEditGamesMenu/: ForwardUserFromEditGamesMenu.cxx  ForwardUserFromEditGamesMenu.ixx
Code/App/Tasks/ForwardUserFromMainMenu/: ForwardUserFromMainMenu.cxx  ForwardUserFromMainMenu.ixx
Code/App/Tasks/GetEditGamesMenuOptionChoice/: GetEditGamesMenuOptionChoice.cxx  GetEditGamesMenuOptionChoice.ixx
Code/App/Tasks/GetGameIDUsedToChangeGameTitle/: GetGameIDUsedToChangeGameTitle.cxx  GetGameIDUsedToChangeGameTitle.ixx
Code/App/Tasks/GetGameIDUsedToResetGameClock/: GetGameIDUsedToResetGameClock.cxx  GetGameIDUsedToResetGameClock.ixx
Code/Core/App/: App.cxx  App.hxx  App.ixx
Code/Core/AppConfig/: AppConfig.cxx  AppConfig.hxx  AppConfig.ixx
Code/Core/AppEntryPoint/: Main.cxx  Main.cxx.bak
Code/Core/AppState/: AppState.cxx  AppState.hxx
Code/Core/Console/: Console.cxx  Console.hxx  Console.ixx
Code/Core/GameClock/: GameClock.cxx  GameClock.hxx  GameClock.ixx
Code/Core/GameEntry/: GameEntry.cxx  GameEntry.hxx  GameEntry.ixx
Code/Core/GameLibrary/: GameLibrary.cxx  GameLibrary.hxx  GameLibrary.ixx
Code/Core/Include/: Console.hpp
Code/Core/Source/: Console.cpp  main.cpp
Code/Core/TaskType/: TaskType.hxx  TaskType.ixx
Code/Core/Utils/: Utils.cxx  Utils.hxx  Utils.ixx
Code/Includes/: AppSettings.h  AppSettings.hpp  AppSettingsDefaults.h  AppSettingsDefaults.hpp  AppSettingsFile.h  AppSettingsFile.hpp  AppState.h  AppVersionFile.h  Console.h  Console.hpp  DiskManager.h  DiskManager.hpp  GameClockTimeTypes.hpp  GameEntry.h  GameEntry.hpp  GameEntryBase.h  GameLibrary.h  GameLibrary.hpp  GamesLibraryFile.h  GamesLibraryFile.hpp  Pch.h  Pch.hpp  PlatformSpecificHeaders.h  PlatformSpecificHeaders.hpp  RepoMetadata.hpp  TaskDispatcher.h  TaskDispatcher.hpp  TaskType.h  WindowsHeader.h
Code/Includes/Tasks/: AddNewGame.h  AddNewGame.hpp  ChangeAutoSaveInterval.h  ChangeAutoSaveInterval.hpp  ChangeGameTitle.h  ChangeGameTitle.hpp  CheckForUpdates.h  CheckForUpdates.hpp  CreateGamesDatabaseBackup.h  CreateGamesDatabaseBackup.hpp  DeleteAllGames.hpp  DeleteGame.h  DeleteGame.hpp  EditGamesMenu.h  EditGamesMenu.hpp  ListGames.h  ListGames.hpp  MainMenu.h  MainMenu.hpp  ResetAllGamesPlaytime.h  ResetAllGamesPlaytime.hpp  ResetGamePlaytime.h  ResetGamePlaytime.hpp  RestoreSettingsDefaults.h  RestoreSettingsDefaults.hpp  SettingsMenu.h  SettingsMenu.hpp  StartApp.h  StartApp.hpp  StopApp.h  StopApp.hpp  ToggleAutoSaveStatus.h  ToggleAutoSaveStatus.hpp  ToggleGameClock.h  ToggleGameClock.hpp
Code/Interfaces/Include/: IListGames.hpp  IListOptions.hpp
Code/Sources/: AppSettings.cpp  AppState.cpp  Console.cpp  DiskManager.cpp  GameEntry.cpp  GameLibrary.cpp  Main.cpp  TaskDispatcher.cpp
Code/Sources/Tasks/: AddNewGame.cpp  ChangeAutoSaveInterval.cpp  ChangeGameTitle.cpp  CheckForUpdates.cpp  CreateGamesDatabaseBackup.cpp  DeleteAllGames.cpp  DeleteGame.cpp  EditGamesMenu.cpp  ListGames.cpp  MainMenu.cpp  ResetAllGamesPlaytime.cpp  ResetGamePlaytime.cpp  RestoreSettingsDefaults.cpp  SettingsMenu.cpp  StartApp.cpp  StopApp.cpp  ToggleAutoSaveStatus.cpp  ToggleGameClock.cpp
Code/Tasks/: Tasks.hxx  Tasks.ixx
Code/Tasks/AddNewGame/: AddNewGame.cxx  AddNewGame.hxx  AddNewGame.ixx
Code/Tasks/ChangeAutoSaveInterval/: ChangeAutoSaveInterval.cxx  ChangeAutoSaveInterval.hxx  ChangeAutoSaveInterval.ixx
Code/Tasks/ChangeGameTitle/: ChangeGameTitle.cxx  ChangeGameTitle.hxx  ChangeGameTitle.ixx
Code/Tasks/CheckForUpdates/: CheckForUpdates.cxx  CheckForUpdates.hxx
Code/Tasks/DeleteGame/: DeleteGame.cxx  DeleteGame.hxx  DeleteGame.ixx
Code/Tasks/EditGamesMenu/: EditGamesMenu.cxx  EditGamesMenu.hxx  EditGamesMenu.ixx
Code/Tasks/ListGames/: ListGames.cxx  ListGames.hxx  ListGames.ixx
Code/Tasks/MainMenu/: MainMenu.cxx  MainMenu.hxx  MainMenu.ixx
Code/Tasks/ResetGameClock/: ResetGameClock.cxx  ResetGameClock.hxx  ResetGameClock.ixx
Code/Tasks/SettingsMenu/: SettingsMenu.cxx  SettingsMenu.hxx  SettingsMenu.ixx
Code/Tasks/StartApp/: StartApp.cxx  StartApp.hxx  StartApp.ixx
Code/Tasks/StopApp/: StopApp.cxx  StopApp.hxx  StopApp.ixx
Code/Tasks/ToggleAutoSave/: ToggleAutoSave.cxx  ToggleAutoSave.hxx  ToggleAutoSave.ixx
Code/Tasks/ToggleGameClock/: ToggleGameClock.cxx  ToggleGameClock.hxx
Editions/ConsoleApp/: .clangd  CMakeLists.txt  CMakePresets.json  vcpkg.json
Editions/ConsoleApp/Metadata/: change_log.json
Editions/ConsoleApp/VCPKG_Triplets/: release-macos.cmake
(+108 files in other folders)
